# taxi-demand-forecasting

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/schemas/: prediction_schema.py
app/services/: prediction_service.py
configs/: training_config.py
notebooks/: 01_data_exploration.ipynb
src/data/: validate_raw_data.py
src/evaluation/: metrics.py
src/features/: build_features.py
src/models/: model_factory.py  train_model.py  tune_model.py
tests/: test_api.py
