[project]
name = "taxi-demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "great-expectations>=1.18.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=2.20,<3",
    "pandas>=2.2,<3",
    "pyarrow>=15,<24",
    "scikit-learn>=1.9.0",
]
