[project]
name = "taxi-demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "great-expectations>=1.18.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=2.20,<3",
    "pyarrow>=15,<24",
    "pytest>=9.1.1",
    "xgboost>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
